--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.1",
     "@astrojs/react": "^4.2.0",
     "@pheralb/toast": "^1.0.0",
     "@tailwindcss/vite": "^4.0.3",
