--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.2.0",
     "@astrojs/vercel": "^8.0.8",
+    "@formkit/tempo": "^0.1.2",
     "@pheralb/toast": "^1.0.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^19.0.8",
