--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "tslib": "^2.8.1"
   },
   "packageManager": "pnpm@10.6.1"
 }
