--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "client2",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.2.7",
-    "@astrojs/vercel": "^8.1.4",
-    "@formkit/tempo": "^0.1.2",
-    "@pheralb/toast": "^1.0.0",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@tailwindcss/vite": "^4.1.5",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.7",
-    "astro": "^5.7.10",
-    "lucide-react": "^0.506.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^4.1.5",
-    "tslib": "^2.8.1"
-  },
-  "packageManager": "pnpm@10.10.0",
-  "devDependencies": {
-    "@eslint/js": "^9.25.1",
-    "eslint": "^9.25.1",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript-eslint": "^8.31.1"
-  }
+	"name": "client2",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"lint": "eslint \"src/**/*.{jsx,js,astro,css}\""
+	},
+	"dependencies": {
+		"@astrojs/react": "^4.2.7",
+		"@astrojs/vercel": "^8.1.4",
+		"@formkit/tempo": "^0.1.2",
+		"@pheralb/toast": "^1.0.0",
+		"@radix-ui/react-dialog": "^1.1.11",
+		"@tailwindcss/vite": "^4.1.5",
+		"@types/react": "^18.3.20",
+		"@types/react-dom": "^18.3.7",
+		"astro": "^5.7.10",
+		"lucide-react": "^0.506.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"tailwindcss": "^4.1.5",
+		"tslib": "^2.8.1"
+	},
+	"packageManager": "pnpm@10.10.0",
+	"devDependencies": {
+		"@eslint/js": "^9.25.1",
+		"eslint": "^9.25.1",
+		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-prettier": "^5.2.6",
+		"globals": "^16.0.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"typescript-eslint": "^8.31.1"
+	}
 }
