--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,14 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.8.0",
-    "@strapi/plugin-users-permissions": "5.8.0",
-    "@strapi/strapi": "5.8.0",
-    "better-sqlite3": "11.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.0.0",
-    "styled-components": "^6.0.0"
+    "@strapi/plugin-cloud": "5.23.0",
+    "@strapi/plugin-users-permissions": "5.23.0",
+    "@strapi/strapi": "5.23.0",
+    "better-sqlite3": "12.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {},
   "engines": {
@@ -27,5 +27,6 @@
   },
   "strapi": {
     "uuid": "1d62e58e-70b4-47a2-9e97-e3d4954e7cf1"
-  }
+  },
+  "packageManager": "pnpm@10.15.0"
 }
