--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/react": "^4.3.0",
 		"@astrojs/vercel": "^8.2.6",
+		"@clerk/astro": "^2.15.1",
 		"@formkit/tempo": "^0.1.2",
 		"@pheralb/toast": "^1.0.0",
 		"@radix-ui/react-dialog": "^1.1.15",
