--- a/client/package.json
+++ b/client/package.json
@@ -14,21 +14,27 @@
 		"@astrojs/vercel": "^8.2.6",
 		"@clerk/astro": "^2.15.1",
 		"@formkit/tempo": "^0.1.2",
+		"@libsql/client": "^0.15.15",
 		"@pheralb/toast": "^1.0.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@tailwindcss/vite": "^4.1.12",
 		"@types/react": "^18.3.23",
 		"@types/react-dom": "^18.3.7",
+		"@upstash/ratelimit": "^2.0.7",
+		"@upstash/redis": "^1.35.6",
 		"astro": "^5.13.2",
+		"drizzle-orm": "^0.44.7",
 		"lucide-react": "^0.540.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"tailwindcss": "^4.1.12",
-		"tslib": "^2.8.1"
+		"tslib": "^2.8.1",
+		"zod": "^4.1.12"
 	},
 	"packageManager": "pnpm@10.15.0",
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
+		"drizzle-kit": "^0.31.7",
 		"eslint": "^9.33.0",
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
