--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
 		"@astrojs/react": "^4.3.0",
 		"@astrojs/vercel": "^8.2.6",
 		"@clerk/astro": "^2.15.1",
+		"@clerk/clerk-react": "^5.56.2",
+		"@clerk/localizations": "^3.28.3",
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.15.15",
 		"@pheralb/toast": "^1.0.0",
