--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@clerk/localizations": "^3.28.3",
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.15.15",
+		"@lucide/astro": "^0.554.0",
 		"@pheralb/toast": "^1.0.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@tailwindcss/vite": "^4.1.12",
